# code-review-graph

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
code_review_graph/: cli.py  communities.py  parser.py  skills.py  visualization.py
docs/: FEATURES.md  LLM-OPTIMIZED-REFERENCE.md  ROADMAP.md  USAGE.md
tests/: test_multilang.py  test_notebook.py  test_parser.py  test_skills.py
tests/fixtures/: sample.php  sample.xs  sample_databricks_export.py
